@@ -2,6 +2,7 @@
             Memory usage improvement: The root scope is never stored in the scope list (it's searched by default)
             E.dumpVariables now dumps variable flags
             Tidying up Native Function handling (now JSV_NATIVE_FUNCTION not JSV_NATIVE|JSV_FUNCTION)
+            NRF.getSecurityStatus now returns 'connected_addr' for the address of the currently-connected device
 
      2v12 : nRF52840: Flow control XOFF is now sent at only 3/8th full - delays in BLE mean we can sometimes fill our 1k input buffer otherwise
             __FILE__ is now set correctly for apps (fixes 2v11 regression)
